--- a/user-portal/pubspec.yaml
+++ b/user-portal/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.5.3
   web_socket_channel: ^3.0.3
   record: ^6.0.0
+  audioplayers: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
