--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,4 @@ pydantic-settings==2.6.1
 python-jose[cryptography]==3.3.0
 passlib[argon2]==1.7.4
 email-validator==2.2.0
+pipecat-ai[google,silero]==0.0.103
